feat: Add backend server, implement lazy loading for background images, and include new media assets and optimization scripts.

--- a/gallery.html
+++ b/gallery.html
@@ -142,7 +142,7 @@
 
                 <!-- Gallery Image 1 -->
                 <div class="experience-item large gallery-item" data-category="cultural">
-                    <img src="images/gallery/img1.jpeg" alt="Gallery Image 1" class="experience-img"
+                    <img src="images/gallery/img1.jpeg" alt="Gallery Image 1" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -154,7 +154,7 @@
 
                 <!-- Gallery Image 2 -->
                 <div class="experience-item  gallery-item" data-category="wildlife">
-                    <img src="images/gallery/img2.jpeg" alt="Gallery Image 2" class="experience-img"
+                    <img src="images/gallery/img2.jpeg" alt="Gallery Image 2" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -166,7 +166,7 @@
 
                 <!-- Gallery Image 3 -->
                 <div class="experience-item  gallery-item" data-category="beaches">
-                    <img src="images/gallery/img3.jpeg" alt="Gallery Image 3" class="experience-img"
+                    <img src="images/gallery/img3.jpeg" alt="Gallery Image 3" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -178,7 +178,7 @@
 
                 <!-- Gallery Image 4 -->
                 <div class="experience-item wide gallery-item" data-category="nature">
-                    <img src="images/gallery/img4.jpeg" alt="Gallery Image 4" class="experience-img"
+                    <img src="images/gallery/img4.jpeg" alt="Gallery Image 4" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -190,7 +190,7 @@
 
                 <!-- Gallery Image 5 -->
                 <div class="experience-item  gallery-item" data-category="tourists">
-                    <img src="images/gallery/img5.jpeg" alt="Gallery Image 5" class="experience-img"
+                    <img src="images/gallery/img5.jpeg" alt="Gallery Image 5" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -202,7 +202,7 @@
 
                 <!-- Gallery Image 6 -->
                 <div class="experience-item  gallery-item" data-category="cultural">
-                    <img src="images/gallery/img6.jpeg" alt="Gallery Image 6" class="experience-img"
+                    <img src="images/gallery/img6.jpeg" alt="Gallery Image 6" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -214,7 +214,7 @@
 
                 <!-- Gallery Image 7 -->
                 <div class="experience-item large gallery-item" data-category="wildlife">
-                    <img src="images/gallery/img7.jpeg" alt="Gallery Image 7" class="experience-img"
+                    <img src="images/gallery/img7.jpeg" alt="Gallery Image 7" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -226,7 +226,7 @@
 
                 <!-- Gallery Image 8 -->
                 <div class="experience-item  gallery-item" data-category="beaches">
-                    <img src="images/gallery/img8.jpeg" alt="Gallery Image 8" class="experience-img"
+                    <img src="images/gallery/img8.jpeg" alt="Gallery Image 8" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -238,7 +238,7 @@
 
                 <!-- Gallery Image 9 -->
                 <div class="experience-item  gallery-item" data-category="nature">
-                    <img src="images/gallery/img9.jpeg" alt="Gallery Image 9" class="experience-img"
+                    <img src="images/gallery/img9.jpeg" alt="Gallery Image 9" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -250,7 +250,7 @@
 
                 <!-- Gallery Image 10 -->
                 <div class="experience-item wide gallery-item" data-category="tourists">
-                    <img src="images/gallery/img10.jpeg" alt="Gallery Image 10" class="experience-img"
+                    <img src="images/gallery/img10.jpeg" alt="Gallery Image 10" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -262,7 +262,7 @@
 
                 <!-- Gallery Image 11 -->
                 <div class="experience-item  gallery-item" data-category="cultural">
-                    <img src="images/gallery/img11.jpeg" alt="Gallery Image 11" class="experience-img"
+                    <img src="images/gallery/img11.jpeg" alt="Gallery Image 11" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -274,7 +274,7 @@
 
                 <!-- Gallery Image 12 -->
                 <div class="experience-item  gallery-item" data-category="wildlife">
-                    <img src="images/gallery/img12.jpeg" alt="Gallery Image 12" class="experience-img"
+                    <img src="images/gallery/img12.jpeg" alt="Gallery Image 12" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -286,7 +286,7 @@
 
                 <!-- Gallery Image 13 -->
                 <div class="experience-item large gallery-item" data-category="beaches">
-                    <img src="images/gallery/img13.jpeg" alt="Gallery Image 13" class="experience-img"
+                    <img src="images/gallery/img13.jpeg" alt="Gallery Image 13" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -298,7 +298,7 @@
 
                 <!-- Gallery Image 14 -->
                 <div class="experience-item  gallery-item" data-category="nature">
-                    <img src="images/gallery/img14.jpeg" alt="Gallery Image 14" class="experience-img"
+                    <img src="images/gallery/img14.jpeg" alt="Gallery Image 14" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -310,7 +310,7 @@
 
                 <!-- Gallery Image 15 -->
                 <div class="experience-item  gallery-item" data-category="tourists">
-                    <img src="images/gallery/img15.jpeg" alt="Gallery Image 15" class="experience-img"
+                    <img src="images/gallery/img15.jpeg" alt="Gallery Image 15" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -322,7 +322,7 @@
 
                 <!-- Gallery Image 16 -->
                 <div class="experience-item wide gallery-item" data-category="cultural">
-                    <img src="images/gallery/img16.jpeg" alt="Gallery Image 16" class="experience-img"
+                    <img src="images/gallery/img16.jpeg" alt="Gallery Image 16" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -334,7 +334,7 @@
 
                 <!-- Gallery Image 17 -->
                 <div class="experience-item  gallery-item" data-category="wildlife">
-                    <img src="images/gallery/img17.jpeg" alt="Gallery Image 17" class="experience-img"
+                    <img src="images/gallery/img17.jpeg" alt="Gallery Image 17" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -346,7 +346,7 @@
 
                 <!-- Gallery Image 18 -->
                 <div class="experience-item  gallery-item" data-category="beaches">
-                    <img src="images/gallery/img18.jpeg" alt="Gallery Image 18" class="experience-img"
+                    <img src="images/gallery/img18.jpeg" alt="Gallery Image 18" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -358,7 +358,7 @@
 
                 <!-- Gallery Image 19 -->
                 <div class="experience-item large gallery-item" data-category="nature">
-                    <img src="images/gallery/img19.jpeg" alt="Gallery Image 19" class="experience-img"
+                    <img src="images/gallery/img19.jpeg" alt="Gallery Image 19" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -370,7 +370,7 @@
 
                 <!-- Gallery Image 20 -->
                 <div class="experience-item  gallery-item" data-category="tourists">
-                    <img src="images/gallery/img20.jpeg" alt="Gallery Image 20" class="experience-img"
+                    <img src="images/gallery/img20.jpeg" alt="Gallery Image 20" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -382,7 +382,7 @@
 
                 <!-- Gallery Image 21 -->
                 <div class="experience-item  gallery-item" data-category="cultural">
-                    <img src="images/gallery/img21.jpeg" alt="Gallery Image 21" class="experience-img"
+                    <img src="images/gallery/img21.jpeg" alt="Gallery Image 21" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -394,7 +394,7 @@
 
                 <!-- Gallery Image 22 -->
                 <div class="experience-item wide gallery-item" data-category="wildlife">
-                    <img src="images/gallery/img22.jpeg" alt="Gallery Image 22" class="experience-img"
+                    <img src="images/gallery/img22.jpeg" alt="Gallery Image 22" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
@@ -406,7 +406,7 @@
 
                 <!-- Gallery Image 23 -->
                 <div class="experience-item  gallery-item" data-category="beaches">
-                    <img src="images/gallery/img23.jpeg" alt="Gallery Image 23" class="experience-img"
+                    <img src="images/gallery/img23.jpeg" alt="Gallery Image 23" loading="lazy" class="experience-img"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s ease;">
                     <div class="experience-overlay" style="pointer-events: none;">
                         <div class="experience-content">
