docs: update 'About Us' section content with new company description and mission.

--- a/about.html
+++ b/about.html
@@ -106,15 +106,10 @@
                                 <div class="col-md-12 heading-section ftco-animate">
                                     <span class="subheading">About Us</span>
                                     <h2 class="mb-4">Your Trusted Sri Lankan Tour Guide</h2>
-                                    <p>Welcome to Wander Lanka Tours, where we bring the magic of Sri Lanka to life
-                                        through
-                                        authentic, personalized tour experiences. With over a decade of experience in
-                                        the tourism industry, we pride ourselves on being more than just tour guides –
-                                        we are your friends, storytellers, and companions on an unforgettable journey
-                                        through the Pearl of the Indian Ocean.</p>
-                                    <p>Our name "Wander Lanka Tours" reflects our deep connection to Sri Lanka's rich
-                                        heritage
-                                        (Ceylon being the island's former name) and our commitment to being your
+                                    <p>At WanderLanka Tours, we believe travel is more than just visiting places it’s about creating unforgettable memories.
+
+With over 6 years of experience in the Sri Lankan tourism industry, we have proudly guided travelers from around the world through the breathtaking beauty of this island paradise. From misty hill country tea plantations to golden beaches and ancient heritage cities, we design journeys that capture the true spirit of Sri Lanka.</p>
+                                    <p>Our team is passionate, knowledgeable, and committed to delivering safe, comfortable, and personalized travel experiences. Whether you're seeking adventure, relaxation, cultural discovery, or wildlife exploration, we carefully craft each itinerary to match your interests and expectations.</p>
                                 </div>
                             </div>
                         </div>
