--- a/services.html
+++ b/services.html
@@ -310,7 +310,7 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate order-md-last">
                     <div class="img"
-                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px" data-bg="images/taxi.png">
+                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px" data-bg="images/taxi2.png">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
