--- a/about.html
+++ b/about.html
@@ -24,7 +24,12 @@
 
     <link
         href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
+        rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap"
+            rel="stylesheet">
+    </noscript>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -39,6 +44,12 @@
     <link rel="stylesheet" href="css/hero-fixes.css?v=2">
     <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="css/auth-modal.css">
+    <style>
+        .lazy-section {
+            content-visibility: auto;
+            contain-intrinsic-size: 800px;
+        }
+    </style>
 </head>
 
 <body>
@@ -46,8 +57,8 @@
     <nav class="navbar" id="navbar">
         <div class="logo-container">
             <a href="index.html">
-                <img src="images/logo/logo.png" alt="Wander Lanka Tours Logo" class="nav-logo"
-                    style="max-height: 80px;">
+                <img src="images/logo/logo.png" alt="Wander Lanka Tours Logo" class="nav-logo" style="max-height: 80px;"
+                    width="200" height="80" decoding="async">
             </a>
         </div>
 
@@ -63,7 +74,7 @@
 
         <div id="authButton" class="user-actions">
             <!-- Auth content injected by JS -->
-            <button onclick="openModal('loginModal')" class="btn-login-nav">Login</button>
+            <a href="login.html" onclick="openModal('loginModal'); return false;" class="btn-login-nav">Login</a>
         </div>
 
         <div class="burger">
@@ -74,7 +85,8 @@
     </nav>
 
     <section class="hero-wrap hero-wrap-2 js-fullheight">
-        <video autoplay muted loop playsinline webkit-playsinline preload="auto" id="hero-video" class="hero-video">
+        <video autoplay muted loop playsinline webkit-playsinline preload="none" id="hero-video" class="hero-video"
+            poster="images/bg_1.jpg">
             <source src="https://cdn.pixabay.com/video/2024/12/13/246461_large.mp4" type="video/mp4">
         </video>
         <div class="hero-video-fallback" style="background-image: url('images/bg_1.jpg');"></div>
@@ -106,10 +118,18 @@
                                 <div class="col-md-12 heading-section ftco-animate">
                                     <span class="subheading">About Us</span>
                                     <h2 class="mb-4">Your Trusted Sri Lankan Tour Guide</h2>
-                                    <p>At WanderLanka Tours, we believe travel is more than just visiting places it’s about creating unforgettable memories.
+                                    <p>At WanderLanka Tours, we believe travel is more than just visiting places it’s
+                                        about creating unforgettable memories.
 
-With over 6 years of experience in the Sri Lankan tourism industry, we have proudly guided travelers from around the world through the breathtaking beauty of this island paradise. From misty hill country tea plantations to golden beaches and ancient heritage cities, we design journeys that capture the true spirit of Sri Lanka.</p>
-                                    <p>Our team is passionate, knowledgeable, and committed to delivering safe, comfortable, and personalized travel experiences. Whether you're seeking adventure, relaxation, cultural discovery, or wildlife exploration, we carefully craft each itinerary to match your interests and expectations.</p>
+                                        With over 6 years of experience in the Sri Lankan tourism industry, we have
+                                        proudly guided travelers from around the world through the breathtaking beauty
+                                        of this island paradise. From misty hill country tea plantations to golden
+                                        beaches and ancient heritage cities, we design journeys that capture the true
+                                        spirit of Sri Lanka.</p>
+                                    <p>Our team is passionate, knowledgeable, and committed to delivering safe,
+                                        comfortable, and personalized travel experiences. Whether you're seeking
+                                        adventure, relaxation, cultural discovery, or wildlife exploration, we carefully
+                                        craft each itinerary to match your interests and expectations.</p>
                                 </div>
                             </div>
                         </div>
@@ -182,7 +202,7 @@ With over 6 years of experience in the Sri Lankan tourism industry, we have prou
         </div>
     </section>
 
-    <section class="ftco-section testimony-section bg-light">
+    <section class="ftco-section testimony-section bg-light lazy-section">
         <div class="container">
             <div class="row justify-content-center pb-4">
                 <div class="col-md-7 text-center heading-section ftco-animate">
@@ -241,7 +261,8 @@ With over 6 years of experience in the Sri Lankan tourism industry, we have prou
                 <div class="col-lg-4 col-md-6 mb-5 mb-md-0">
                     <div class="footer-brand">
                         <a href="index.html" class="logo">
-                            <img src="images/logo/footer.png" alt="Wander Lanka Tours" class="footer-logo-img">
+                            <img src="images/logo/footer.png" alt="Wander Lanka Tours" class="footer-logo-img"
+                                width="150" height="50" loading="lazy">
                         </a>
                         <p>Your trusted Sri Lankan tour guide, bringing you authentic experiences and unforgettable
                             memories across the Pearl of the Indian Ocean.</p>
@@ -339,7 +360,8 @@ With over 6 years of experience in the Sri Lankan tourism industry, we have prou
                     </div>
 
                     <div class="extra-links">
-                        <a href="#" onclick="switchToForgot(event)" class="forgot-link">Forgot Password?</a>
+                        <a href="forgot-password.html" onclick="switchToForgot(event); return false;"
+                            class="forgot-link">Forgot Password?</a>
                     </div>
 
                     <button type="submit" class="btn-auth">
@@ -350,7 +372,8 @@ With over 6 years of experience in the Sri Lankan tourism industry, we have prou
                 <div class="divider">OR</div>
 
                 <div class="modal-footer" style="background: none; border: none; padding: 0;">
-                    <p>Don't have an account? <a onclick="switchToSignup()">Sign up here</a></p>
+                    <p>Don't have an account? <a href="signup.html" onclick="switchToSignup(); return false;">Sign up
+                            here</a></p>
                 </div>
             </div>
         </div>
@@ -382,7 +405,7 @@ With over 6 years of experience in the Sri Lankan tourism industry, we have prou
                 </form>
             </div>
             <div class="modal-footer">
-                <p>Remembered it? <a onclick="switchToLogin()">Login here</a></p>
+                <p>Remembered it? <a href="login.html" onclick="switchToLogin(); return false;">Login here</a></p>
             </div>
         </div>
     </div>
@@ -428,7 +451,8 @@ With over 6 years of experience in the Sri Lankan tourism industry, we have prou
                 <div class="divider">OR</div>
 
                 <div class="modal-footer" style="background: none; border: none; padding: 0;">
-                    <p>Already have an account? <a onclick="switchToLogin()">Login here</a></p>
+                    <p>Already have an account? <a href="login.html" onclick="switchToLogin(); return false;">Login
+                            here</a></p>
                 </div>
             </div>
         </div>
