--- a/index.html
+++ b/index.html
@@ -34,9 +34,16 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" as="image" href="images/bg_1.jpg">
+
     <link
         href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
+        rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap"
+            rel="stylesheet">
+    </noscript>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -58,6 +65,14 @@
     <link rel="stylesheet" href="css/ceylon-sang-grid.css">
     <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="css/auth-modal.css">
+    <style>
+        /* Performance Optimizations */
+        .lazy-section {
+            content-visibility: auto;
+            contain-intrinsic-size: 800px;
+            /* Improves rendering performance by skipping off-screen content */
+        }
+    </style>
 </head>
 
 <body>
@@ -68,7 +83,7 @@
             <div class="logo-container">
                 <a href="index.html">
                     <img src="images/logo/logo1.png" alt="Wander Lanka Tours Logo" class="nav-logo"
-                        style="max-height: 80px;">
+                        style="max-height: 80px;" width="200" height="80" decoding="async">
                 </a>
             </div>
 
@@ -84,7 +99,7 @@
 
             <div id="authButton" class="user-actions">
                 <!-- Auth content injected by JS: No buttons, minimal text/icon -->
-                <a href="#" onclick="openModal('loginModal')" class="login-link">
+                <a href="login.html" onclick="openModal('loginModal'); return false;" class="login-link">
                     <span class="fa fa-user-circle-o mr-1"></span> Login
                 </a>
             </div>
@@ -103,7 +118,9 @@
     <!-- Hero Section with Video Background -->
     <section class="hero-wrap js-fullheight">
         <!-- Video Background with reduced opacity and slower playback -->
-        <video autoplay muted loop playsinline webkit-playsinline preload="auto" id="hero-video" class="hero-video">
+        <!-- Video Background with reduced opacity and slower playback -->
+        <video autoplay muted loop playsinline webkit-playsinline preload="none" id="hero-video" class="hero-video"
+            poster="images/bg_1.jpg">
             <source src="https://cdn.pixabay.com/video/2022/09/21/132140-752588954_large.mp4" type="video/mp4">
             <!-- Fallback for browsers that don't support video -->
         </video>
@@ -122,7 +139,8 @@
                     <div class="hero-glass-container">
                         <!-- Brand Name with Premium Styling -->
                         <div class="hero-brand-name">
-                            <img src="images/logo/brandname.png" alt="Wander Lanka Tours" class="hero-brand-logo">
+                            <img src="images/logo/brandname.png" alt="Wander Lanka Tours" class="hero-brand-logo"
+                                width="300" height="100" decoding="async">
                         </div>
 
                         <!-- Main Headline -->
@@ -242,7 +260,7 @@
     </section>
 
     <!-- Popular Destinations -->
-    <section class="ftco-section">
+    <section class="ftco-section lazy-section">
         <div class="container">
             <div class="row justify-content-center pb-4">
                 <div class="col-md-12 heading-section text-center ftco-animate">
@@ -253,8 +271,7 @@
             <div class="row">
                 <div class="col-md-4 ftco-animate">
                     <div class="project-wrap">
-                        <a href="destinations.html#sigiriya" class="img"
-                            data-bg="images/home/sigiriya.jpg">
+                        <a href="destinations.html#sigiriya" class="img" data-bg="images/home/sigiriya.jpg">
                             <!-- <span class="price">From $120/person</span> -->
                         </a>
                         <div class="text p-4">
@@ -270,8 +287,7 @@
                 </div>
                 <div class="col-md-4 ftco-animate">
                     <div class="project-wrap">
-                        <a href="destinations.html#ella" class="img"
-                            data-bg="images/home/ninearch.jpg">
+                        <a href="destinations.html#ella" class="img" data-bg="images/home/ninearch.jpg">
                             <!-- <span class="price">From $90/person</span> -->
                         </a>
                         <div class="text p-4">
@@ -287,8 +303,7 @@
                 </div>
                 <div class="col-md-4 ftco-animate">
                     <div class="project-wrap">
-                        <a href="destinations.html#galle" class="img"
-                            data-bg="images/home/galle.jpg">
+                        <a href="destinations.html#galle" class="img" data-bg="images/home/galle.jpg">
                             <!-- <span class="price">From $80/person</span> -->
                         </a>
                         <div class="text p-4">
@@ -329,21 +344,22 @@
                             <span class="package-duration">7 Days / 6 Nights</span>
                             <h3>Cultural Triangle Tour</h3>
                             <p>Explore ancient kingdoms, temples, and UNESCO World Heritage Sites</p>
-                            <a href="javascript:void(0);" class="btn btn-whatsapp btn-block send-inquiry-btn"><i
-                                    class="fa fa-whatsapp"></i> Book via WhatsApp</a>
+                            <a href="https://wa.me/94711818549?text=I'm%20interested%20in%20the%20Cultural%20Triangle%20Tour"
+                                class="btn btn-whatsapp btn-block send-inquiry-btn"><i class="fa fa-whatsapp"></i> Book
+                                via WhatsApp</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate">
                     <div class="package-card">
-                        <div class="package-img"
-                            data-bg="images/destinations/mirissa/mirissa.jpg"></div>
+                        <div class="package-img" data-bg="images/destinations/mirissa/mirissa.jpg"></div>
                         <div class="package-content">
                             <span class="package-duration">5 Days / 4 Nights</span>
                             <h3>Beach & Wildlife Safari</h3>
                             <p>Perfect blend of relaxation and adventure with wildlife encounters</p>
-                            <a href="javascript:void(0);" class="btn btn-whatsapp btn-block send-inquiry-btn"><i
-                                    class="fa fa-whatsapp"></i> Book via WhatsApp</a>
+                            <a href="https://wa.me/94711818549?text=I'm%20interested%20in%20the%20Beach%20%26%20Wildlife%20Safari"
+                                class="btn btn-whatsapp btn-block send-inquiry-btn"><i class="fa fa-whatsapp"></i> Book
+                                via WhatsApp</a>
                         </div>
                     </div>
                 </div>
@@ -364,7 +380,7 @@
     </section>
 
     <!-- Testimonials/Reviews Section -->
-    <section class="ftco-section testimony-section bg-light">
+    <section class="ftco-section testimony-section bg-light lazy-section">
         <div class="container">
             <div class="row justify-content-center pb-4">
                 <div class="col-md-7 text-center heading-section ftco-animate">
@@ -408,7 +424,8 @@
                 <div class="col-lg-4 col-md-6 mb-5 mb-md-0">
                     <div class="footer-brand">
                         <a href="index.html" class="logo">
-                            <img src="images/logo/footer.png" alt="Wander Lanka Tours" class="footer-logo-img">
+                            <img src="images/logo/footer.png" alt="Wander Lanka Tours" class="footer-logo-img"
+                                width="150" height="50" loading="lazy">
                         </a>
                         <p>Your trusted Sri Lankan tour guide, bringing you authentic experiences and unforgettable
                             memories across the Pearl of the Indian Ocean.</p>
@@ -539,7 +556,8 @@
                 <div class="divider">OR</div>
 
                 <div class="modal-footer" style="background: none; border: none; padding: 0;">
-                    <p>Don't have an account? <a onclick="switchToSignup()">Sign up here</a></p>
+                    <p>Don't have an account? <a href="signup.html" onclick="switchToSignup(); return false;">Sign up
+                            here</a></p>
                 </div>
             </div>
         </div>
@@ -571,7 +589,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <p>Remembered it? <a onclick="switchToLogin()">Login here</a></p>
+                <p>Remembered it? <a href="login.html" onclick="switchToLogin(); return false;">Login here</a></p>
             </div>
         </div>
     </div>
@@ -617,7 +635,8 @@
                 <div class="divider">OR</div>
 
                 <div class="modal-footer" style="background: none; border: none; padding: 0;">
-                    <p>Already have an account? <a onclick="switchToLogin()">Login here</a></p>
+                    <p>Already have an account? <a href="login.html" onclick="switchToLogin(); return false;">Login
+                            here</a></p>
                 </div>
             </div>
         </div>
@@ -728,12 +747,12 @@
 
 
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
+        document.addEventListener("DOMContentLoaded", function () {
             var lazyBackgrounds = [].slice.call(document.querySelectorAll("[data-bg]"));
 
             if ("IntersectionObserver" in window) {
-                let lazyBackgroundObserver = new IntersectionObserver(function(entries, observer) {
-                    entries.forEach(function(entry) {
+                let lazyBackgroundObserver = new IntersectionObserver(function (entries, observer) {
+                    entries.forEach(function (entry) {
                         if (entry.isIntersecting) {
                             let lazyBackground = entry.target;
                             lazyBackground.style.backgroundImage = 'url(' + lazyBackground.dataset.bg + ')';
@@ -742,13 +761,13 @@
                     });
                 });
 
-                lazyBackgrounds.forEach(function(lazyBackground) {
+                lazyBackgrounds.forEach(function (lazyBackground) {
                     lazyBackgroundObserver.observe(lazyBackground);
                 });
             } else {
                 // Fallback
-                lazyBackgrounds.forEach(function(lazyBackground) {
-                     lazyBackground.style.backgroundImage = 'url(' + lazyBackground.dataset.bg + ')';
+                lazyBackgrounds.forEach(function (lazyBackground) {
+                    lazyBackground.style.backgroundImage = 'url(' + lazyBackground.dataset.bg + ')';
                 });
             }
         });
