--- a/services.html
+++ b/services.html
@@ -39,15 +39,22 @@
     <link rel="stylesheet" href="css/hero-fixes.css?v=2">
     <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="css/auth-modal.css">
+    <style>
+        .lazy-section {
+            content-visibility: auto;
+            contain-intrinsic-size: 800px;
+        }
+    </style>
 </head>
 
 <body>
     <nav class="navbar" id="navbar">
         <div class="logo-container">
             <a href="index.html">
-                <img src="images/logo/logo.png" alt="Wander Lanka Tours Logo" class="nav-logo"
-                    style="max-height: 80px;">
-            </a>
+                <a href="index.html">
+                    <img src="images/logo/logo.png" alt="Wander Lanka Tours Logo" class="nav-logo"
+                        style="max-height: 80px;" width="200" height="80" decoding="async">
+                </a>
         </div>
 
         <ul class="nav-links">
@@ -62,7 +69,7 @@
 
         <div id="authButton" class="user-actions">
             <!-- Auth content injected by JS -->
-            <button onclick="openModal('loginModal')" class="btn-login-nav">Login</button>
+            <a href="login.html" onclick="openModal('loginModal'); return false;" class="btn-login-nav">Login</a>
         </div>
 
         <div class="burger">
@@ -73,7 +80,8 @@
     </nav>
 
     <section class="hero-wrap hero-wrap-2 js-fullheight">
-        <video autoplay muted loop playsinline webkit-playsinline preload="auto" id="hero-video" class="hero-video">
+        <video autoplay muted loop playsinline webkit-playsinline preload="none" id="hero-video" class="hero-video"
+            poster="images/bg_1.jpg">
             <source src="https://cdn.pixabay.com/video/2025/06/18/286459_large.mp4" type="video/mp4">
         </video>
         <div class="hero-video-fallback" data-bg="images/bg_1.jpg"></div>
@@ -107,7 +115,8 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate">
                     <div class="img"
-                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px" data-bg="images/dest-sigiriya.jpg">
+                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px"
+                        data-bg="images/dest-sigiriya.jpg">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -136,7 +145,8 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate order-md-last">
                     <div class="img"
-                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px" data-bg="images/dest-yala.jpg">
+                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px"
+                        data-bg="images/dest-yala.jpg">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -165,7 +175,8 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate">
                     <div class="img"
-                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px" data-bg="images/beach.png">
+                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px"
+                        data-bg="images/beach.png">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -192,7 +203,8 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate order-md-last">
                     <div class="img"
-                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px" data-bg="images/dest-adams-peak.jpg">
+                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px"
+                        data-bg="images/dest-adams-peak.jpg">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -220,7 +232,8 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate">
                     <div class="img"
-                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px" data-bg="images/teaplantation.png">
+                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px"
+                        data-bg="images/teaplantation.png">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -248,7 +261,8 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate order-md-last">
                     <div class="img"
-                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px" data-bg="images/dest-ella.jpg">
+                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px"
+                        data-bg="images/dest-ella.jpg">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -280,7 +294,8 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate">
                     <div class="img"
-                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px" data-bg="images/airport.png">
+                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px"
+                        data-bg="images/airport.png">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -310,7 +325,8 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate order-md-last">
                     <div class="img"
-                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px" data-bg="images/taxi2.png">
+                        style="height: 400px; background-size: cover; background-position: center; border-radius: 10px"
+                        data-bg="images/taxi2.png">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -405,7 +421,8 @@
                 <div class="col-lg-4 col-md-6 mb-5 mb-md-0">
                     <div class="footer-brand">
                         <a href="index.html" class="logo">
-                            <img src="images/logo/footer.png" alt="Wander Lanka Tours" class="footer-logo-img">
+                            <img src="images/logo/footer.png" alt="Wander Lanka Tours" class="footer-logo-img"
+                                width="150" height="50" loading="lazy">
                         </a>
                         <p>Your trusted Sri Lankan tour guide, bringing you authentic experiences and unforgettable
                             memories across the Pearl of the Indian Ocean.</p>
@@ -514,7 +531,8 @@
                 <div class="divider">OR</div>
 
                 <div class="modal-footer" style="background: none; border: none; padding: 0;">
-                    <p>Don't have an account? <a onclick="switchToSignup()">Sign up here</a></p>
+                    <p>Don't have an account? <a href="signup.html" onclick="switchToSignup(); return false;">Sign up
+                            here</a></p>
                 </div>
             </div>
         </div>
@@ -546,7 +564,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <p>Remembered it? <a onclick="switchToLogin()">Login here</a></p>
+                <p>Remembered it? <a href="login.html" onclick="switchToLogin(); return false;">Login here</a></p>
             </div>
         </div>
     </div>
@@ -592,7 +610,8 @@
                 <div class="divider">OR</div>
 
                 <div class="modal-footer" style="background: none; border: none; padding: 0;">
-                    <p>Already have an account? <a onclick="switchToLogin()">Login here</a></p>
+                    <p>Already have an account? <a href="login.html" onclick="switchToLogin(); return false;">Login
+                            here</a></p>
                 </div>
             </div>
         </div>
@@ -627,12 +646,12 @@
 
 
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
+        document.addEventListener("DOMContentLoaded", function () {
             var lazyBackgrounds = [].slice.call(document.querySelectorAll("[data-bg]"));
 
             if ("IntersectionObserver" in window) {
-                let lazyBackgroundObserver = new IntersectionObserver(function(entries, observer) {
-                    entries.forEach(function(entry) {
+                let lazyBackgroundObserver = new IntersectionObserver(function (entries, observer) {
+                    entries.forEach(function (entry) {
                         if (entry.isIntersecting) {
                             let lazyBackground = entry.target;
                             lazyBackground.style.backgroundImage = 'url(' + lazyBackground.dataset.bg + ')';
@@ -641,13 +660,13 @@
                     });
                 });
 
-                lazyBackgrounds.forEach(function(lazyBackground) {
+                lazyBackgrounds.forEach(function (lazyBackground) {
                     lazyBackgroundObserver.observe(lazyBackground);
                 });
             } else {
                 // Fallback
-                lazyBackgrounds.forEach(function(lazyBackground) {
-                     lazyBackground.style.backgroundImage = 'url(' + lazyBackground.dataset.bg + ')';
+                lazyBackgrounds.forEach(function (lazyBackground) {
+                    lazyBackground.style.backgroundImage = 'url(' + lazyBackground.dataset.bg + ')';
                 });
             }
         });
